force-app/main/default/objects/SMS_CreditsTranfer__c/SMS_CreditsTranfer__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lists zuora details for transfering credits from secondary subscription to primary subscription</description>
    <label>SMS Credits Tranfer</label>
</CustomObject>