force-app/main/default/objects/SMS_CreditsTranfer__c/fields/zProductId__c.field-meta.xml
<CustomField>
    <fullName>zProductId__c</fullName>
    <label>zProductId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>