force-app/main/default/objects/SMS_CreditsTranfer__c/fields/zProductRatePlanChargeId__c.field-meta.xml
<CustomField>
    <fullName>zProductRatePlanChargeId__c</fullName>
    <label>zProductRatePlanChargeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>