force-app/main/default/objects/SMS_CreditsTranfer__c/fields/zProductRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>zProductRatePlanId__c</fullName>
    <label>zProductRatePlanId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>